--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -28,6 +28,9 @@
     .warning{
         color: red;
     }
+    .asteriskField {
+        display: none;
+    }
 </style>
 
 <body class="container-fluid">
@@ -79,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2" style="margin-bottom:30px">
-                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Change</button>
+                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white; margin-top:0px" class="btn btn-default btn-md" type="submit">Change</button>
                 </div>
             </div>
         </form>
@@ -98,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2" style="margin-bottom:30px">
-                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Change</button>
+                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white; margin-top:0px" class="btn btn-default btn-md" type="submit">Change</button>
                 </div>
             </div>
         </form>
@@ -119,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2" style="margin-bottom:30px">
-                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Change</button>
+                    <button onclick="location.href = '/accounts/profile';" style="background-color:#18435A; color:white; margin-top:30px" class="btn btn-default btn-md" type="submit">Change</button>
                 </div>
             </div>
         </form>
