--- a/landing_map/templates/landing_map/report_detail.html
+++ b/landing_map/templates/landing_map/report_detail.html
@@ -19,46 +19,22 @@
                     <h5>Issue: </h5>
                     <p class="not_accessible">Inaccessible {{report.infraType}}</p>
 
-                    <h5>time reported: </h5>
-                    <p>{{report.createdAt}}</p>
-
                     <h5>Updates: </h5>
+
+                    {% for username, comment, updatedAt in report.desc %}
 
                     <!-- all updates -->
                     <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
                         <div style="padding: 10px;">
                             <p style="font-size:smaller; margin-bottom: 1px;"> 
-                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
-                            <p style="margin-bottom: 0px;">{{report.desc}}</p>
+                                <b style="color:#18435A;">{{comment}} </b>{{updatedAt}}</p>
+                            <p style="margin-bottom: 0px;">{{username}}</p>
                         </div>
                     </div>
 
-                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
-                        <div style="padding: 10px;">
-                            <p style="font-size:smaller; margin-bottom: 1px;"> 
-                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
-                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
-                        </div>
-                    </div>
-
-                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
-                        <div style="padding: 10px;">
-                            <p style="font-size:smaller; margin-bottom: 1px;"> 
-                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
-                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
-
-                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
-                        <div style="padding: 10px;">
-                            <p style="font-size:smaller; margin-bottom: 1px;"> 
-                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
-                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                    </div>
+                    {% endfor %}
 
                 </div>  
-                
             </div>
         </div>
     </div>
