Removed buggy character counter

--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -17,7 +17,7 @@
               <label for="message-text" class="col-form-label">Description:</label>
               <input type = "hidden" name = infraID value = '{{card.card_id}}'>
            <textarea name = "comment" class="form-control" id="message-text" style="height: 180px;" required="required" maxlength="200"></textarea>
-           <span class="pull-right label label-default" id="count_message"></span>
+<!--           <span class="pull-right label label-default" id="count_message"></span>-->
               <input type = "hidden" name = x_coord value = '{{x_coord}}'>
               <input type = "hidden" name = y_coord value = '{{y_coord}}'>
               <div class="modal-footer">
