Issue160 atul connect updates (#211)
* Added character limit for issue description

* Connected report updates on landing page to DB

* fixed multiple report cards for same infra

* Issue158 sarthak reports mapbox (#192)

* Added maps to homepage reports and fixed searchbox alignment

* Added maps to reports on mappage

* Added maps to reports on mappage

* Issue136 sarthak copy share buttons (#193)

* Added share and copy button to map page

* Added share and copy button to low vision page

* Issue79 ames contact us functionality (#194)

* contact us form sends emails to team and user

* added message sent message

* Issue93&165 claudia active emailpage help page (#195)

* add help page content

* change button hover color

* check email page

* render check email page

* proofing help.html

* Update tests.py

Co-authored-by: Simone B <76664640+SNefertitiB@users.noreply.github.com>

* changed default radius to 0.5 miles (#197)

reviewed by Ames

* Issue164 simone tests (#200)

* new branch?

* tests for add_favorite

* fixed black

* remove_favorite test

* goto_favorite test

* reports tests

* uncommented add favorite test

* tests for resolve_report

* Issue189&190&173 claudia login reset password (#202)

* make navbar fixed position

* add right margin and remove border radius

* update alert messages

* update margin top for sign up

* fix sizing issues

* Issue181&188 ames testing party fixes (#203)

* previous URL saved & added map button in navabr

* black

* minor fix

* fixed tests for HTTP_REFERER (#201)

Thank Simone

* fav nearby reports change

Co-authored-by: = <=>
Co-authored-by: Simone B <76664640+SNefertitiB@users.noreply.github.com>

* Added character limit for issue description

* fixed multiple report cards for same infra

* Fixed styling issues

* black fixes

* Removed buggy character counter

Co-authored-by: Sarthak Gagdani <31386718+Sartha

--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="modal fade" id="report_issue_form_{{card.card_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -8,13 +10,14 @@
         </div>
 
         <div class="modal-body">
-          <form action = "{% url 'report' %}" method = "POST" >
+          <form action = "{% url 'report' %}" method = "POST" accept-charset="UTF-8">
             {% csrf_token %}
             <div class="form-group">
               <p class="not_accessible">Mark {{card.type}} as inaccessible</p>
               <label for="message-text" class="col-form-label">Description:</label>
               <input type = "hidden" name = infraID value = '{{card.card_id}}'>
-           <textarea name = "comment" class="form-control" id="message-text" style="height: 180px;" required="required"></textarea>
+           <textarea name = "comment" class="form-control" id="message-text" style="height: 180px;" required="required" maxlength="200"></textarea>
+<!--           <span class="pull-right label label-default" id="count_message"></span>-->
               <input type = "hidden" name = x_coord value = '{{x_coord}}'>
               <input type = "hidden" name = y_coord value = '{{y_coord}}'>
               <div class="modal-footer">
@@ -28,3 +31,5 @@
       </div>
     </div>
 </div>
+
+<script src="{% static 'landing_map/limit_char.js' %} "></script>
