Issue196 180 sarthak loader&mapbox (#209)
* added loader to the map page and landing page

* fixed hiding of search bar suggestions under reports

added right margin to copy and share icons

--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -49,6 +49,7 @@ a.nav-list:hover{
     top: 35%;
     left: 52% !important;
     transform: translate(-50%, -50%);
+    z-index: 100;
 }
 
 .noborder{
@@ -203,6 +204,8 @@ div.table-lowvision{
 .shareButton {
     cursor:pointer;
     padding: 8px;
+    font-size: 20px;
+    margin-right: 10px;
 }
 
 .shareButton .sharetooltiptext {
@@ -241,6 +244,8 @@ div.table-lowvision{
 .copyButton {
   cursor:pointer;
   padding: 8px;
+  padding-right:0px;
+  font-size: 20px;
 }
 
 .copyButton .copytooltiptext {
