--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -76,6 +76,7 @@ p.not_accessible{
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
+    float:right !important;
 }
 
 .add button{
@@ -205,7 +206,6 @@ div.table-lowvision{
     cursor:pointer;
     padding: 8px;
     font-size: 20px;
-    margin-right: 10px;
 }
 
 .shareButton .sharetooltiptext {
@@ -256,11 +256,11 @@ div.table-lowvision{
   color: #fff;
   text-align: center;
   border-radius: 4px;
-  padding: 4px;
+  padding: 3px;
   position: absolute;
   z-index: 1;
   bottom: 80%;
-  margin-left: -60px;
+  margin-left: -30px;
   opacity: 0;
   transition: opacity 0.3s;
 }
