--- a/accounts/templates/deleted.html
+++ b/accounts/templates/deleted.html
@@ -43,6 +43,7 @@
     <div class="padding">
         <div class="pad"><div class="cent">
             <h1>Account successfully deleted</h1>
+            <h3>Sorry to see you go, your account can be reactivated on the signup page</h3>
             <br><br><br>
             <a href="/">Click here to be redirected to the home page</a>
         </div>
