reformatting "account deleted" page

--- a/accounts/templates/deleted.html
+++ b/accounts/templates/deleted.html
@@ -42,10 +42,13 @@
 {% load crispy_forms_tags %}
     <div class="padding">
         <div class="pad"><div class="cent">
+            <br><br>
             <h1>Account successfully deleted</h1>
-            <h3>Sorry to see you go, your account can be reactivated on the signup page</h3>
+            <br>
+            <h4>Sorry to see you go :(</h4>
+            <h4>Your account can be reactivated on the signup page</h4>
             <br><br><br>
-            <a href="/">Click here to be redirected to the home page</a>
+            <a href="/">Click here to be redirected to home</a>
         </div>
 
     </div>
