--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -31,18 +31,7 @@
 </style>
 
 <body class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
-  <div class="navbar-header">
-    <a class="nav-brand" href="/">NYC Accessible Streets</a>
-  </div>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li><a class = "nav-list" href="/accounts/profile"> My Profile</a></li>
-      <li><a class = "nav-list" href="/accounts/help"><i class="fas fa-question"></i> Help</a></li>
-      <li><a class = "nav-list" href="/accounts/logout"><i class="fas fa-user"></i> Log Out</a></li>
-    </ul>
-  </div>
-</nav>
+{% include 'b4common/navbar.html' %}
 {% load crispy_forms_tags %}
     <div class="padding">
         <div class="pad"><div class="cent">
