Added help page description for account reactivation. Addd my favorites tab on my profile page navbar

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -113,7 +113,11 @@
             <h4>This website is not compatible with my screen reader, what can I do?</h4>
                 <p>If you notice any part of the website that is not screen-reader compatible, please contact us using the form below
                 by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
-                    
+
+            <h4>I deleted my old account but want to restore it, what can i do?</h4>
+                <p>Go to the signup page and scroll to the very bottom. There is an option that says "Deleted your old account? Reactivate it here"
+                where you can restore your old account with your old username and password</p>
+
         <br><br>
     </div>
 
