--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -38,6 +38,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li><a class = "nav-list" href="/accounts/profile"> My Profile</a></li>
+      <li><a class = "nav-list" href="/myFav"><span class="glyphicon glyphicon-heart"></span> My Favorites</a></li>
       <li><a class = "nav-list" href="/accounts/help"><i class="fas fa-question"></i> Help</a></li>
       <li><a class = "nav-list" href="/accounts/logout"><i class="fas fa-user"></i> Log Out</a></li>
     </ul>
