--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -29,7 +29,7 @@
                     {% for username, comment, updatedAt in card.comment %}
 
                     <!-- all updates -->
-                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px; overflow-wrap: break-word;">
                         <div style="padding: 10px;">
                             <p style="font-size:smaller; margin-bottom: 1px;"> 
                                 <b style="color:#18435A;">{{comment}} </b>{{updatedAt}}</p>
